# code-mcp

./: .gitignore  CNAME  LICENSE  README.md  dev_terminal_mcp.py  dev_terminal_mcp_enhanced.py  index.html  install.ps1  install.sh  main.py  pyproject.toml  remote-install.sh  requirements.txt  uninstall.sh
css/: styles.css
docs/: api.html  index.html
js/: script.js
src/code_mcp/: __init__.py  edit_utils.py  jupyter_utils.py  server.py  setup_helper.py
src/code_mcp/remote/: __init__.py  mcp_bridge_client.py  remote_bridge_server.py  ssh_bridge_setup.py  test_connection.py  tool_integration.py
